# tdms-analytics

./: .gitignore  Makefile  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  read_arrow.py  test_api.md  tsconfig.base.json  window.arrow
.github/workflows/: ci.yml
api-gateway/: .env.example  package-lock.json  package.json
api-gateway/docs/: swagger.json  swagger.yaml
api-gateway/src/: app.module.ts  main.ts
apps/api-gateway/: project.json
apps/dataset-service/: .env.example  project.json  pyproject.toml
apps/frontend/: package-lock.json  package.json  project.json
infra/redis-conf/: users.acl
tdms-analytics-backend/: .env.example  README.md  pyproject.toml
tdms-analytics-backend/src/tdms_analytics/: app.py  app_settings.py
tdms-analytics-backend/src/tdms_analytics/clients/: clickhouse.py
tdms-analytics-backend/src/tdms_analytics/dependencies/: clickhouse.py
tdms-analytics-backend/src/tdms_analytics/entities/: dataset.py  sensor_data.py
tdms-analytics-backend/src/tdms_analytics/exceptions/: tdms_exceptions.py
tdms-analytics-backend/src/tdms_analytics/repos/: channel_repo.py  dataset_repo.py  sensor_data_repo.py  sensor_readings_repo.py
tdms-analytics-backend/src/tdms_analytics/routes/: channels.py  data_windows.py  datasets.py  health.py  ingestion.py  monitoring.py
tdms-analytics-backend/src/tdms_analytics/scripts/: init_clickhouse.py
tdms-analytics-backend/src/tdms_analytics/utils/: io_tdms.py  lttb.py
tdms-analytics-frontend/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json
(+93 files in other folders)
